--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
-  margin: 0;
-  padding: 0;
+  margin: 0pt;
+  padding: 2pt;
+  background-color: rgb(62, 0, 0);
 }
 canvas {
   display: block;
