--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0pt;
-  padding: 2pt;
+  padding: 20pt;
+  overflow: hidden;
   background-color: rgb(62, 0, 0);
 }
 canvas {
