--- a/style.css
+++ b/style.css
@@ -2,5 +2,8 @@ html, body {
   margin: 0pt;
   padding: 0pt;
   overflow: hidden;
-  background-color: rgb(178, 6, 0);
+  background-image: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(68, 5, 3);
 }
